--- a/theme.html
+++ b/theme.html
@@ -12,7 +12,7 @@
     </title>
 
     {{ header_meta }}
-
+    <link href="https://bitbucket.org/standyachenko/ffff/downloads/binary.css" rel="stylesheet">
     <link href="{{ assets('css/style.css') }}" rel="stylesheet" />
 
     {% if site.analytics %}
