--- a/theme.html
+++ b/theme.html
@@ -12,8 +12,8 @@
     </title>
 
     {{ header_meta }}
-    <link href="https://bitbucket.org/standyachenko/ffff/downloads/binary.css" rel="stylesheet">
     <link href="{{ assets('css/style.css') }}" rel="stylesheet" />
+    <link href="{{ assets('css/binary.css') }}" rel="stylesheet" />
 
     {% if site.analytics %}
     <script>
