--- a/theme.html
+++ b/theme.html
@@ -66,7 +66,7 @@
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.atom_url }}" />
 
     <link href="http://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
-    <link href="{{ assets('css/style.css') }}" rel="stylesheet" />
+   <!-- <link href="{{ assets('css/style.css') }}" rel="stylesheet" />-->
     <link href="{{ assets('css/binary.css') }}" rel="stylesheet" />
     <link href="{{ static('mediaelement/mediaelementplayer.css') }}" rel="stylesheet" />
 
